<resources>
    <string name="app_name">Квадрат Пифагора</string>
    <string name="mnuAbout">О программе</string>
    <string name="mnuExit">Выход</string>
    <string name="sovmBrak">Совместимость в браке</string>
    <string name="Srch">Поиск дат</string>
    <string name="FullDescript">Полное описание характеристик</string>
    <string name="god2000">
В вашей дате присутствует год рождения позднее 1999. Согласно автору книги, если год рождения 2000 и выше, то для правильного расчета нужна корректировка даты. Автор на этом не настаивает, так что возможно расчёт будет правильным и после 2000 года. Но, если для вас это важно или интересно, можете ознакомится с правилами корректировки в книге Александра Александрова – \'Дата рождения - ключ к пониманию человека\'.
</string>
    <string name="BrakAbout">
Не имеет значения где будут введены даты рождения мужа и жены. Приписки "муж" и "жена" сделаны для удобства отображения информации.
"\n"Расчёт делается на совместимость двух дат.
</string>
    <string name="BrakAbout2">
ВЫЧИСЛЕНИЕ СРОКА СТАБИЛЬНОСТИ БРАКА
"\n"Данная авторская разработка предлагается вам не столько для работы с людьми, сколько как тема для размышления и проверки теории на практике.
В основу этого метода заложена фигура, которая состоит из квадратов, но имеет новое качество - объем. Речь идет о Кубе. Из курса школьной геометрии вы знаете, что объем вычисляется умножением трех его измерений. Способ вычисления объема достаточно прост, но остается самое главное - выяснить, что такое те самые измерения, которые надо умножить и что при этом получится.
Проведем не очень сложные рассуждения. В предыдущем параграфе мы рассматривали соотношение восходящей и спадающей диагоналей. Возьмем за основу наших рассуждений, что семья может держаться на бытовом интересе или на духовной основе, когда люди живут из-за интереса друг к другу (как к личности)
 </string>
    <string name="About">
Програма сделана по книге Александра Александрова \'Дата рождения - ключ к пониманию\'
"\n""\n"Следует помнить, что даже с одинаковой датой рождения, люди всё равно разные. В жизни, в силу каких-либо обстоятельств одни цифры переходят в другие, например, 11 могут превратится в 8 или наоборот, а 66 могут превратится в 7. при чём такие переходы могут быть постоянными, а могут быть и временными, в зависимости от ситуации, например, в гневе, 66 могут превращаться в 666, за счет каких-то других цифр и тд.
"\n""\n"Так же не следует забывать, что расчет делается не на человека, а на дату, и можно проверять не только дату рождения, но и дату любого события.
    </string>
    <string name="short1">
<b>1 - Характер человека, эго, воля, осознание </b>
"\n"1 - Если в расчете всего одна единица, то этот человек — утонченный эгоист. Не обращая ни на что вокруг внимания, он стремится из любого положения извлечь максимальную выгоду прежде всего для себя. Его мало интересуют другие люди и то — чем и как они живут. Главное, что живет и должен жить только он один.
"\n"11 - У человека присутствует слабо выраженный эгоизм (все время себя хвалит, как на продажу, боится переоценить)
"\n"111 - Человек обладает хорошим характером, покладистым. Таких людей достаточно трудно вывести из себя, с ними всегда можно найти общий язык.
"\n"1111 - Человек сильного характера, волевой. Не терпит подхалимажа и лжи, хотя иногда, сцепив зубы, может пойти и на это ради близких людей. Мужчины с таким характером подходят на роль профессиональных военных, женщины обычно держат в кулаке свою семью.
"\n"11111 - Человек — диктатор, самодур. Ради своей идеи или прихоти может пустить на ветер миллионы — или человеческих жизней, или денег. Для достижения своей цели идет, что называется, \'по трупам\', не оглядываясь и не останавливаясь. Если у него нет возможности ощутить свою значительность, может стать тираном в семье, отшельником или приобрести какие-нибудь психические расстройства. Настойчив в намерениях, в мести, хорошо приспосабливается. Часто преследуем какой-то серьезной манией. Привязчив к своим детям или внукам. Конкретен — старается все продумать заранее.
"\n"111111 - Такая комбинация встречается редко. Человек обычно жесткий, жестокий, но для близких или \'на благо человечества\' способен совершить невозможное. Люди очень незаурядные, нередко попадающие под влияние какой-то одной идеи. С ними тяжело общаться, трудно конкурировать.
    </string>
    <string name="short2">
<b>2 - Биоэнергетика, страстность, сексуальность</b>
"\n"2 - Обычные в биоэнергетическом отношении люди. Все же биоэнергии маловато. Эти люди должны избегать стрессовых ситуаций, слишком сильных эмоций, обязательны занятия физкультурой или спортом, эффективнее же всего — йога. Такие люди очень чувствительны к изменениям в атмосфере.
"\n"22 - Присутствует достаточное количество биоэнергии, способен делится энергией с другими, может стать целителем. В семье таких людей в принципе редко у кого бывают нервные стрессы, если, конечно, взаимоотношения не осложнены какими-то особыми обстоятельствами.
"\n"222 - Знак экстрасенса. Возможно, что человек сам не подозревает о своих способностях, но такие люди наиболее приспособлены к тому, чтобы лечить своим биополем. Для развития своих способностей им достаточно лишь небольшого толчка.
"\n"2222 - Если вы когда-нибудь встречали женщину, в которую влюблены все без исключения мужчины, или мужчину, неотразимого для всех женщин, то вы наверняка убедитесь в наличии у них этих двоек. Этих людей очень любит противоположный пол. Однако этим людям с высокой биоэнергетикой следует поостеречься: именно на них безошибочно выходят те, кто имеет \'знак сатаны\' — они черпают в них энергию, подпитываются ею, буквально выкачивают ее.
    </string>
    <string name="short3">
<b>3 - Внутренний склад человека, хозяйственность, порядочность</b>
"\n"нет - обычно очень чистоплотные или пунктуальные люди, что-то выделяет их из окружающей среды - они постоянно что-то чистят, трут; женщины без троек - отличные хозяйки, но несколько раздражают своим стремлением к чистоте; мужчины тщательно следят за своим внешним видом и не терпят, когда их подруги опаздывают на свидания. Детей воспитывают в строгости. Любят наблюдать себя в зеркале, произносить умные, витиеватые фразы.  ропотливый труд выполняют безукоризненно.
"\n"3 - Этих людей не беспокоит порядок, все зависит от настроения, \'хочу делаю, хочу нет\'.
"\n"33 - явно выражена склонность к наукам. аналитический склад ума. хорошие математики, физики, химики, ученые.
"\n"333 - Усиленная склонность к наукам; если она не реализуется, то порождает невозможную педантичность, скупость, наклонность к постоянному \'восстановлению справедливости\'.
"\n"3333 - Большие способности, появляется не желание развиваться
    </string>
    <string name="short4">
<b>4 - Здоровье, сексуальность</b>
"\n"нет - Здоровье очень слабое, человек с детства подвержен различным заболеваниям; болеть будет тем больше, чем больше у него двоек, потому что так или иначе будет вынужден отдавать свою энергию.
"\n"4 - Здоровье среднее, необходимо закалять организм; болезни подступают к старости.
"\n"44 - От природы это очень крепкий человек с повышенным темпераментом.
"\n"444 - Люди с очень крепким здоровьем и огромными сексуальными возможностями. Мужчины от природы очень сильные физически.
    </string>
    <string name="short5">
<b>5 - Интуиция</b>
"\n"нет - Открытый канал при рождении, поэтому этот человек всегда пытается что-то предпринять, что-то доказать, всегда голова в раздумье, сам в эксперименте, в расчете. Жизненный опыт показывает, что с этим человеком трудно жить. Все достается (пробивает) своей головой.
"\n"5 - Канал связи открыт. Эти люди совершают гораздо меньшее число ошибок и в жизни и вообще, могут правильно рассчитать ситуацию и извлечь из нее максимальную пользу.
"\n"55 - Сильно развитая интуиция. Могут предугадывать ход событий. Самые подходящие для них профессии: юрист, следователь.
"\n"555 - Почти ясновидящие. Такие люди всегда знают, как действовать в той или иной ситуации, поэтому практически не допускают ошибок. В ряде случаев точно предсказывают предстоящие события.
"\n"5555 - Ясновидящие. Все, что вокруг происходит, им совершенно ясно. В их жизни бывают моменты, когда они находятся вне времени и пространства. Личности, при полной реализации своих способностей выходящие за рамки обычного человеческого.
    </string>
    <string name="short6">
<b>6 -  Степень заземленности, логика, расчетливость</b>
"\n"нет - Такой человек пришел на землю приобрести ремесло, физический труд необходим, но он его не любит.
"\n"6 - Человек в какой-то мере заземлен, можно заниматься творчеством или точными науками, но физический труд является обязательным условием существования.
"\n"66 - Человек очень заземлен. Эти люди тянутся к физическому труду, хотя, как раз для них он не обязателен.
"\n"666 - Знак сатаны. Люди повышенного темперамента, обаятельные, неизменно становящиеся в обществе центром внимания. Партнёр, на ком женат, должен быть с большим количеством двоек, т.к. он подпитывается от своего партнера и часто, насосав энергию уходит к другому партнеру.
"\n"6666 - Этот человек в своих предыдущих воплощениях набрал много заземленности, он очень много трудится. Для него не существует тяжести труда (физического), он всегда трудится. обязательно нужен институт, если в расчете есть 9-ки
    </string>
    <string name="short7">
<b>7 - Мера таланта, связь с высшими силами</b>
"\n"нет - Этот человек родился, чтобы зарабатывать семерки, а заработать их можно только стараниями. Очень тяжелая жизнь. Почти всегда приведет к религии.
"\n"7 - Божья искра. Таким людям живется значительно легче, есть талант, но неярко выражен
"\n"77 - Это очень сильный знак ангелоподобия, если его развивать полностью. Человек очень одаренный, музыкальный, имеет художественный вкус, сможет рисовать. Если в расчете две единицы, то его эгоизм может руководить им и его талантом. Такой человек ходит по лезвию бритвы, ему удается все, хорошее и плохое. Для него нет закрытых дверей. Если он будет судиться, то ему обязательно помогут выиграть процесс или вытащить из ямы. С детства нужно учиться альтруизму.
"\n"777 - Знак особый. Эти люди, как правило, приходят на землю ненадолго, а если же пришли с жизненными достатками, то их ждет в старости паралич.
"\n"7777 - Знак Ангела. Люди с таким знаком умирают в младенчестве, а если остаются жить, то их жизни постоянно угрожает опасность или катастрофа.
    </string>
    <string name="short8">
<b>8 - Чувство долга</b>
"\n"нет - Соответствует почти полному отсутствию чувства долга. Человек никогда не считает себя кому-то обязанным, не спешит отдавать взятое и пропускает все назначенные сроки.
"\n"8 - Можно сказать, что эти люди наделены тем, что называется чувством долга: они ответственны, добросовестны, точны в делах.
"\n"88 - Очень развито чувство долга. Этих людей всегда отличает желание помочь другим, особенно слабым, больным, одиноким. Считают себя ответственными за кого-либо или что-либо. Обычно прекрасные семьянины.
"\n"888 - Это великий знак. Знак служения народу. Такие люди или возглавляют нации, чтобы вести их путем избранных, или, оставаясь в тени, не жалея себя и не щадя сил, работают на их благо. В любом случае правитель с тремя восьмерками добивается выдающихся результатов.
"\n"8888 - Знак будет только в 88 году. Дети с этим знаком рождаются с парапсихологическими способностями и исключительной восприимчивостью к точным наукам. Им открыты сверхъестественные пути.
    </string>
</resources>